[metadata]
name = pywaymon
version = attr:pywaymon.__about__.__version__
url = https://gitlab.com/pradyparanjpe/pywaymon.git
download_url =
project_urls =
    Documentation = https://pradyparanjpe.gitlab.io/pywaymon
    Source_url = https://gitlab.com/pradyparanjpe/pywaymon.git
author = Pradyumna Paranjape
author_email = pradyparanjpe@rediffmail.com
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: System :: Shells
license = LGPLv3
license_files =
    LICENSE
description = pywaymon - modular segments with fancy tooltips for waybar
maintainer =
maintainer_email =
long_description = file: README.org
long_description_content_type = text/x-org
keywords =
# platforms =
#     linux
provides = pywaymon
obsoletes =

[options]
zip_safe =
setup_requires =
install_requires =
    psutil
    toml
    xdgpspconf
extras_require =
python_requires =
    >=3.9
scripts =
eager_resources =
dependency_links =
tests_require =
    coverage
    pytest
    toml
include_package_data = True
package_dir = =src
packages = find:
py_modules =

[options.entry_points]
console_scripts =
    pywaymon = pywaymon.__main__:main

[options.packages.find]
where=src
